# macro

./: .env  Cargo.toml
motio_macro/: Cargo.toml
motio_macro/src/: lib.rs
src/: main.rs
src/handlers/: user.rs
src/model/: user.rs
src/routers/: router.rs
src/utilities/: common.rs
