[package]
name = "motio_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.12", features = ["full"] }
darling="0.14.4"
bson = "2.6.1"
futures-util = "0.3.19"

